# LimitForge

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  RESUME_AND_INTERVIEW.md  SECURITY.md  VALIDATION_REPORT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
docs/: algorithms.md  architecture.md  benchmarking.md  benchmarks-concurrent.json  benchmarks-concurrent.md  benchmarks.json  benchmarks.md  design-decisions.md  django.md  interview-guide.md  memory-results.md  publishing.md  redis-atomicity.md
examples/: basic.py  concurrency_demo.py  redis_example.py
examples/django_demo/: README.md
examples/django_demo/demo/: settings.py  urls.py
scripts/: benchmark.py  memory_benchmark.py
src/limitforge/: __init__.py  clock.py  exceptions.py  headers.py  limiter.py  models.py
src/limitforge/backends/: __init__.py  base.py  memory.py  redis.py
src/limitforge/backends/lua/: __init__.py  fixed_window.lua  sliding_window.lua  token_bucket.lua
src/limitforge/django/: __init__.py  config.py  decorators.py  keys.py  middleware.py
tests/integration/: test_redis_atomicity.py
tests/unit/: test_concurrency.py  test_django_config.py  test_fixed_window.py  test_headers.py  test_limiter.py  test_memory_backend.py  test_models.py  test_redis_backend_mapping.py  test_sliding_window.py  test_token_bucket.py
